# SpeedySign

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.json  docker-entrypoint.sh  global.css  metro.config.js  package-lock.json  package.json  render.yaml  tailwind.config.js  test-drive.js  tsconfig.json
SpeedySigner/: .gitignore  Cargo.toml
SpeedySigner/speedysigner-core/: Cargo.toml
SpeedySigner/speedysigner-core/src/: lib.rs  signer.rs
SpeedySigner/speedysigner-core/src/macho/: injection.rs  mod.rs
SpeedySigner/speedysigner-core/src/plist/: mod.rs
SpeedySigner/speedysigner-core/src/signature/: cms.rs  mod.rs  p12.rs
SpeedySigner/speedysigner-core/src/zip/: mod.rs  parser.rs  reader.rs  writer.rs
app/: _layout.tsx  certificates.tsx  repositories.tsx
components/: AppCard.tsx  CertificateBadge.tsx  CustomSwitch.tsx  FloatingSigningBubble.tsx  IpaCustomizer.tsx  LiquidGlass.tsx  LiquidTabBar.tsx  OptimizedImage.tsx  ProgressBar.tsx  RepoCard.tsx  ScrollToTopButton.tsx  SigningLog.tsx  StandaloneTabBar.tsx  WebSplash.tsx
constants/: colors.ts  defaultRepos.ts
contexts/: RepositoryContext.tsx  SigningContext.tsx
hooks/: useCertificates.ts  useInstalledApps.ts  useRepos.ts  useTheme.ts
i18n/: config.ts
server/: .dockerignore  index.ts  inject-cert.html  jest.config.js  package-lock.json  package.json  testOcsp.ts  tsconfig.json
utils/: cache.ts  certValidator.ts  imgProxy.ts  ipaDownloader.ts  logger.ts  notify.tsx  platform.ts  pushNotify.ts  repoExporter.ts  repoParser.ts  sanitizer.ts  searchIndex.ts  securityValidator.ts  (+2 more)
(+35 files in other folders)
