[package]
name = "speedysigner-core"
version = "0.1.0"
edition = "2021"

[dependencies]
goblin = { version = "0.8.0", default-features = false, features = ["mach32", "mach64", "endian_fd", "std"] }
plist = "1.6.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
rsa = { version = "0.9.6", features = ["pem", "sha2"] }
der = { version = "0.7.8", features = ["derive", "pem"] }
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
crc32fast = "1.3.2"
hex = "0.4.3"

[target.'cfg(not(windows))'.dependencies]
zsign = { package = "zsign-rs", path = "../vendor/zsign-rs" }
